Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8156789
missing condition in ClassPathZipEntry::open_versioned_entry()
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
9
Affects Version/s:
9
Component/s:
hotspot
Labels:
None
Subcomponent:
runtime
Resolved In Build:
b120
Description
This is for adding the missing condition !_is_boot_append back to ClassPathZipEntry::open_versioned_entry().
It was removed inadvertently during bug fixing in another repo.
Attachments
Activity
People
Assignee:
Calvin Cheung (Inactive)
Reporter:
Calvin Cheung (Inactive)
Votes
:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
2016-05-11 11:11
Updated:
2016-05-26 10:17
Resolved:
2016-05-11 13:29