8156789: missing condition in ClassPathZipEntry::open_versioned_entry()

Added back the !_is_boot_append condition

Reviewed-by: hseigel, jiangli